crates/tokio-otp/tests/ui/topology/zero_fields.stderr
error: Topology requires at least one actor field
 --> tests/ui/topology/zero_fields.rs:4:8
  |
4 | struct EmptyTopology {}
  |        ^^^^^^^^^^^^^
