crates/tokio-otp/tests/ui/topology/zero_fields.rs
use tokio_otp::Topology;

#[derive(Topology)]
struct EmptyTopology {}

fn main() {}
